# tocha

./: .gitmodules  CMakeLists.txt
include/tocha/: tensor.hh  tensor.hxx
include/tochac/: tensor.h
src/npz2tbin/: CMakeLists.txt  main.cc
src/tbin-diff/: CMakeLists.txt  main.cc
src/tbin-dump/: CMakeLists.txt  main.cc
src/tbin2npz/: CMakeLists.txt  main.cc
